# minhttp-rs

./: Cargo.toml
src/: main.rs
src/http/: message.rs  mod.rs  reader.rs  request.rs  response.rs  stream.rs  writer.rs
www/: index.html  other.html
www/.errors/: 400.html  404.html
