[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio-rustls = "0.25"
rustls-pemfile = "2.1"
pki-types = { package = "rustls-pki-types", version = "1" }
async-std = "1.12"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"